changed homepage text length based on screen size also for the Dutch home component, fixed problem that user on mobile phones in the projects  onclick gets redirected immediately to a project

--- a/client/src/CSS/Home.css
+++ b/client/src/CSS/Home.css
@@ -68,6 +68,7 @@
         width: 13%;
         height: 15%;
         padding-right: 2%;
+        
     }
 
     .welcome {
@@ -114,8 +115,8 @@
     }
 
     .home-introduction img {
-        width: 27%;
-        height: 15%;
+        width: 60px;
+        height: 60px;
         padding-right: 2%;
 
         position: relative;
